[package]
name = "dexscreener"
version = "0.1.0"
edition = "2021"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
repository = "https://github.com/danipopes/dexscreener"
homepage = "https://docs.rs/dexscreener"
documentation = "https://docs.rs/dexscreener"
description = "A Rust Dexscreener HTTP API client"
license = "MIT"
categories = ["api-bindings", "cryptography::cryptocurrencies"]
keywords = ["ethereum", "solana", "api", "blockchain", "crypto"]
exclude = [".github/"]

[dependencies]
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive", "std", "alloc"], default-features = false }
url = "2.3"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
